# CppCMakeVcpkgTemplate

./: CMakeLists.txt  README.md
.github/workflows/: hosted-ninja-vcpkg_submod.yml  hosted-pure-workflow.yml
src/example_app/: CMakeLists.txt
src/example_test/: CMakeLists.txt
